plugins {
	id 'org.sonarqube' version '3.3'
	id "jacoco"
	id 'org.springframework.boot' version '2.3.12.RELEASE'
	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
	id 'java'
}

group = 'ru.skillbox'
version = '0.0.5_08.06.2022_subcomment'
sourceCompatibility = '11'

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-test'
	implementation 'org.springframework.boot:spring-boot-starter-aop'
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation group: 'io.jsonwebtoken', name: 'jjwt', version: '0.9.1'
	implementation 'org.liquibase:liquibase-core:4.8.0'
	implementation 'org.postgresql:postgresql:42.3.3'
	implementation 'com.dropbox.core:dropbox-core-sdk:5.2.0'
	implementation group: 'org.apache.commons', name: 'commons-text', version: '1.9'
	implementation 'org.springframework.boot:spring-boot-starter-mail'
	implementation group: 'javax.mail', name: 'javax.mail-api', version: '1.6.2'
	implementation 'io.zonky.test:embedded-database-spring-test:2.1.0'
	implementation group: 'cn.apiclub.tool', name: 'simplecaptcha', version: '1.2.2'
	implementation 'io.swagger.core.v3:swagger-annotations:2.2.0'
	implementation 'org.springdoc:springdoc-openapi-ui:1.6.8'
	implementation 'org.springdoc:springdoc-openapi-security:1.6.8'
	compileOnly 'org.projectlombok:lombok:1.18.22'
	annotationProcessor 'org.projectlombok:lombok:1.18.22'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation group: 'org.springframework.security', name: 'spring-security-test', version: '5.3.13.RELEASE'
	testImplementation 'org.springframework.security:spring-security-test'
	implementation group: 'org.imgscalr', name: 'imgscalr-lib', version: '4.2'
	implementation group: 'org.redisson', name: 'redisson', version: '3.17.3'
	testImplementation 'com.opentable.components:otj-pg-embedded:0.13.4'
	runtimeOnly 'io.micrometer:micrometer-registry-prometheus'
}

sonarqube {
	properties {
		property "sonar.sourceEncoding", "UTF-8"
		property "sonar.projectKey", "0a9f98cfe9f5f5307f2960910d4e44cc3d0e370e"
		property "sonar.sources", "src/main"
		property "sonar.tests", "src/test"
		property "sonar.login", "0a9f98cfe9f5f5307f2960910d4e44cc3d0e370e"
		property "sonar.lenguage", "java"
	}
}

test {
	finalizedBy jacocoTestReport // report is always generated after tests run
}

jacocoTestReport {
	dependsOn test // tests are required to run before generating the report
	reports {
		xml.enabled true
	}

	afterEvaluate {
		classDirectories.setFrom(files(classDirectories.files.collect {
			fileTree(dir: it, exclude: [
					"ru/skillbox/socnetwork/model/**",
			])
		}))
	}
}

plugins.withType(JacocoPlugin) {
	tasks["test"].finalizedBy 'jacocoTestReport'
}

tasks.named('test') {
	useJUnitPlatform()
}
